# slambook14_ws

./: .clang-format  .gitignore  LICENSE  README.md
src/ch10_back_end_2/: CMakeLists.txt  package.xml
src/ch10_back_end_2/data/: result1_10.3.1.g2o  result2_10.3.1.g2o  result3_10.3.1.g2o  result4_10.3.1.g2o  result5_10.3.1.g2o  result_10.3.2.g2o  sphere_10.3.1.g2o
src/ch10_back_end_2/src/: 10.3.1_pose_graph_g2o_SE3.cpp  10.3.2_pose_graph_g2o_lie_algebra.cpp
src/ch11_loop_closure_detection/: CMakeLists.txt  package.xml
src/ch11_loop_closure_detection/src/: 11.3.2_DBoW3_training_dictionary.cpp  11.4.2_DBoW3_similarity_calculation.cpp
src/ch3_rigid_body_trans/: CMakeLists.txt  package.xml
src/ch3_rigid_body_trans/launch/: 3.7.1_plotTrajectory.launch.py  show_traj.rviz
src/ch3_rigid_body_trans/src/: 3.6.1_useEigen.cpp  3.6.2_coordinateTrans.cpp  3.7.1_plotTrajectory_node.cpp
src/ch4_lie_theory/: CMakeLists.txt  package.xml
src/ch4_lie_theory/launch/: 4.4.2_trajectoryError.launch.py  show_traj.rviz
src/ch4_lie_theory/src/: 4.4.1_useSophus.cpp  4.4.2_trajectoryError_node.cpp
src/ch5_camera_model/: CMakeLists.txt  package.xml
src/ch5_camera_model/launch/: 5.4.1_show_pointcloud2.rviz  5.4.1_stereoVision_node.launch.py  5.4.2_rgbdJointMap_node.launch.py  5.4.2_show_pointcloud2.rviz  show_pointcloud2.rviz
src/ch5_camera_model/src/: 5.3.1_opencvBasic.cpp  5.3.2_undistortImage.cpp  5.4.1_stereoVision_node.cpp  5.4.2_rgbdJointMap_node.cpp
src/ch6_nonlinear_optimization/: CMakeLists.txt  package.xml
src/ch6_nonlinear_optimization/src/: 6.3.1_byhand.cpp  6.3.2_ceresCurveFitting.cpp  6.3.3_g2oCurveFitting.cpp
src/ch7_visual_odometry_1/: CMakeLists.txt  package.xml
src/ch7_visual_odometry_1/src/: 7.10_ICP_3d3d.cpp  7.2.1_orb_opencv.cpp  7.2.2_orb_byhand.cpp  7.4_polar_constraint_2d2d.cpp  7.6.1_triangulation.cpp  7.8_PnP_3d2d.cpp
src/ch8_visual_odometry_2/: CMakeLists.txt  package.xml
src/ch8_visual_odometry_2/include/: tic_toc.h
src/ch8_visual_odometry_2/src/: 8.3_LK_optical_flow.cpp  8.5_direct_method.cpp
src/ch9_back_end_1/: CMakeLists.txt  package.xml
src/ch9_back_end_1/data/: 16-22106-ceres-final.ply  16-22106-ceres-final.txt  16-22106-ceres-initial.txt  16-22106-g2o-final.ply  16-22106-g2o-final.txt
src/ch9_back_end_1/include/: BAL.h  random.h  rotation.h
src/ch9_back_end_1/module/: FindCSparse.cmake
src/ch9_back_end_1/src/: 9.3_ceres_BA.cpp  9.4_g2o_BA.cpp  BAL.cpp
